--- a/CSSTut/Assignment3.html
+++ b/CSSTut/Assignment3.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="Assignment3.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
+
     <title>Photo Gallery</title>
 </head>
 <body>
+    <p id="name">Pavankumar A N</p>
     <table>
         <tr>
             <td><img class="imageTag" src="one.jpg" alt="No image"></td>
