--- a/CSSTut/Assignment2.html
+++ b/CSSTut/Assignment2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link type="text/css" rel="stylesheet" href="Assignment2.css" >
-    <title>Document</title>
+    <title>Game Assignment</title>
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
