--- a/BootStrapTut/Demo1.html
+++ b/BootStrapTut/Demo1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-    <div class="jumbotron container">
+    <div class="jumbotron container-fluid">
         <p>Hai I'm Pavan, Software Developer at Linkeddots</p>
         <button class="btn btn-success">Contact</button>
     </div>
